# bookops-worldcat

./: .coveragerc  .flake8  .gitignore  .travis.yml  404.html  LICENSE  README.md  README.rst  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  pytest.ini  release-checklist.md  requirements.txt  search.html  sitemap.xml  unit-tests.yaml  venvcmd.sh  versions.json
.github/workflows/: deploy-docs.yaml  monthly-api-tests.yaml  publish.yaml  unit-tests.yaml
0.2/: 404.html  index.html  objects.inv  search.html  sitemap.xml
0.2/about/: index.html
0.2/changelog/: index.html
0.2/search/: search_index.json
0.2/stylesheets/: extra.css
0.3/: 404.html  index.html  objects.inv  search.html  sitemap.xml
0.3/about/: index.html
0.3/api/authorize/: index.html
0.3/api/bookops_worldcat/: index.html
0.3/api/bookops_worldcat.authorize/: index.html
0.3/api/bookops_worldcat.errors/: index.html
0.3/api/bookops_worldcat.metadata_api/: index.html
0.3/api/bookops_worldcat.utils/: index.html
0.3/api/errors/: index.html
0.3/api/metadata_api/: index.html
0.3/api/utils/: index.html
0.3/changelog/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  objects.inv  search.html  sitemap.xml
0.4/about/: index.html
0.4/api/authorize/: index.html
0.4/api/bookops_worldcat/: index.html
0.4/api/bookops_worldcat.authorize/: index.html
0.4/api/bookops_worldcat.errors/: index.html
0.4/api/bookops_worldcat.metadata_api/: index.html
0.4/api/bookops_worldcat.query/: index.html
0.4/api/bookops_worldcat.utils/: index.html
0.4/api/errors/: index.html
0.4/api/metadata_api/: index.html
0.4/api/query/: index.html
0.4/api/utils/: index.html
0.4/changelog/: index.html
0.4/search/: search_index.json
0.4/stylesheets/: extra.css
0.4/tutorials/: index.html
0.5/: 404.html  index.html  objects.inv  search.html  sitemap.xml
0.5/about/: index.html
0.5/api/authorize/: index.html
0.5/api/bookops_worldcat/: index.html
0.5/api/bookops_worldcat.authorize/: index.html
0.5/api/bookops_worldcat.errors/: index.html
0.5/api/bookops_worldcat.metadata_api/: index.html
0.5/api/bookops_worldcat.query/: index.html
0.5/api/bookops_worldcat.utils/: index.html
0.5/api/errors/: index.html
0.5/api/metadata_api/: index.html
0.5/api/query/: index.html
0.5/api/utils/: index.html
0.5/changelog/: index.html
0.5/search/: search_index.json
0.5/tutorials/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/about/: index.html
1.0.0/advanced/: index.html
1.0.0/api/authorize/: index.html
1.0.0/api/errors/: index.html
1.0.0/api/metadata_api/: index.html
1.0.0/api/query/: index.html
1.0.0/api/utils/: index.html
1.0.0/changelog/: index.html
1.0.0/contributing/: index.html
1.0.0/local/: index.html
1.0.0/manage_bibs/: index.html
1.0.0/manage_holdings/: index.html
1.0.0/search/: index.html  search_index.json
1.0.0/start/: index.html
1.0.0/tutorials/: index.html
1.0/about/: index.html
1.0/advanced/: index.html
1.0/api/authorize/: index.html
1.0/api/errors/: index.html
1.0/api/metadata_api/: index.html
1.0/api/query/: index.html
1.0/api/utils/: index.html
1.0/changelog/: index.html
1.0/contributing/: index.html
1.0/local/: index.html
1.0/manage_bibs/: index.html
1.0/manage_holdings/: index.html
1.0/search/: index.html  search_index.json
1.0/start/: index.html
1.0/tutorials/: index.html
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1/about/: index.html
1.1/advanced/: index.html
1.1/api/authorize/: index.html
1.1/api/errors/: index.html
1.1/api/metadata_api/: index.html
1.1/api/query/: index.html
1.1/changelog/: index.html
1.1/contributing/: index.html
1.1/local/: index.html
1.1/manage_bibs/: index.html
1.1/manage_holdings/: index.html
1.1/search/: index.html  search_index.json
1.1/start/: index.html
1.1/tutorials/: index.html
1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.2/about/: index.html
1.2/advanced/: index.html
1.2/changelog/: index.html
1.2/contributing/: index.html
1.2/local/: index.html
1.2/manage_bibs/: index.html
1.2/manage_holdings/: index.html
1.2/search/: index.html  search_index.json
1.2/start/: index.html
1.2/tutorials/: index.html
about/: index.html
advanced/: index.html
api/authorize/: index.html
api/errors/: index.html
api/metadata_api/: index.html
api/query/: index.html
api/utils/: index.html
bookops_worldcat/: __init__.py  __version__.py  _session.py  authorize.py  constant.py  errors.py  metadata_api.py  query.py  search_api.py  session.py  utils.py
changelog/: index.html
contributing/: index.html
docs/: about.md  advanced.md  auth.md  changelog.md  contributing.md  index.md  local.md  manage_bibs.md  manage_holdings.md  search.md  start.md  tutorials.md
docs/api/: authorize.md  errors.md  metadata_api.md  query.md  utils.md
docs/usage/: advanced.md  index.md  local.md  manage_bibs.md  manage_holdings.md  search.md
latest/: 404.html  index.html  search.html  sitemap.xml
latest/about/: index.html
latest/advanced/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/local/: index.html
latest/manage_bibs/: index.html
latest/manage_holdings/: index.html
latest/search/: index.html  search_index.json
latest/start/: index.html
latest/tutorials/: index.html
local/: index.html
manage_bibs/: index.html
manage_holdings/: index.html
search/: index.html  search_index.json
start/: index.html
tests/: conftest.py  test.mrc  test.xml  test_authorize.py  test_bookops_worldcat.py  test_metadata_api.py  test_query.py  test_search_api.py  test_session.py  test_utils.py  test_version.py
tests/webtests/: conftest.py  test_api_spec.py  test_authorize_live.py  test_metadata_api_live.py  test_query_live.py
title=0.2.1/: index.html
title=0.2.1/about/: index.html
title=0.2.1/changelog/: index.html
title=0.3.0/: index.html  search.html
tutorials/: index.html
(+40 files in other folders)
